not pretty but working

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Etch a Sketch!</title>
-    <script src="script.js" defer></script>
+    <script language="javascript" src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
     <div id="mainDiv">
         <h3>Imagine an Etch a Sketch Here:</h3>
-
+        <div id="grid">
+            <p></p>
+        </div>
+        <button id="clear">Clear</button>
     </div>
 </body>
 </html>
