works great, only in blue....

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div id="grid">
             <p></p>
         </div>
-        <button id="clear">Clear</button>
+        <div id="navBar">
+            <button id="clear">Clear</button>
+            <button id="newGrid">New Grid</button>
+        </div>
+        
     </div>
 </body>
 </html>
